	dialog in 'davit/edit_system.cpp' and 'davit/edit_system.h'.
	* Removed duplicate catch clause in 'lib/dvtmail.cpp'.
2014-11-17 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.1.4.
2014-12-09 Fred Gleason <fredg@paravelsystems.com>
	* Renamed 'davit/missingaffidavit_report.cpp' to
	'davit/missingaffidavitcontact_report.cpp'.
2014-12-09 Fred Gleason <fredg@paravelsystems.com>
	* Implemented a 'Missing Affidavit Submissions' report in
	'davit/missingaffidavit_report.cpp'.
2014-12-10 Fred Gleason <fredg@paravelsystems.com>
	* Implemented sorting by Worst Offenders and State in the
	'Missing Affidavit Submissions' report in
	'davit/missingaffidavit_report.cpp'.
2014-12-10 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a typo in the spelling of 'massachusetts' in
	'lib/statecombobox.cpp' and 'lib/state_conv.cpp'.
2014-12-10 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'davit/list_affiliates.cpp' that caused incorrect
	values to appear in the 'License City/State' column after editing
	an affiliate record.
2014-12-10 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'davit/affidavit_report.cpp' that caused lines
	to be triple space in the 'Affidavit Contacts' report.
2014-12-10 Fred Gleason <fredg@paravelsystems.com>
	* Changed '-calc' switch for soffice(1) to '--calc'.
2014-12-11 Fred Gleason <fredg@paravelsystems.com>
	* Refactored 'Missing Affidavit Contacts' report to show Station
	Call and Phone Number.
2014-12-11 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Program by Market' report in
	'davit/programbymarket_report.cpp'.
2014-12-16 Fred Gleason <fredg@paravelsystems.com>
	* Added a spreadsheet rendering system in 'lib/spread_*.
2014-12-18 Fred Gleason <fredg@paravelsystems.com>
	* Converted 'Added Programs' and 'Deleted Programs' report to use
	spreadsheet rendering library.
2014-12-19 Fred Gleason <fredg@paravelsystems.com>
	* Converted 'Affidavit Contacts' report to use spreadsheet
	rendering library.