@@ -729,3 +729,6 @@
 2014-12-19 Fred Gleason <fredg@paravelsystems.com>
 	* Converted 'Affidavit Contacts' report to use spreadsheet
 	rendering library.
+2014-12-19 Fred Gleason <fredg@paravelsystems.com>
+	* Converted 'Affiliate Activity' report to use spreadsheet
+	rendering library.
